--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "axios": "^0.26.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-accessible-accordion": "^4.0.0",
@@ -21,6 +22,7 @@
     "react-scripts": "5.0.0",
     "react-select": "^5.2.2",
     "react-use": "^17.3.2",
+    "recharts": "^2.1.9",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
@@ -50,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.179",
     "@types/react-datepicker": "^4.3.4",
     "@types/react-dates": "^21.8.3",
     "@types/styled-components": "^5.1.23",
